[Login:Fix] Login with google overlapping with the logo

--- a/SoloLearn/src/containers/Login/style.scss
+++ b/SoloLearn/src/containers/Login/style.scss
@@ -178,6 +178,25 @@
 	}
 }
 
+@media screen and ( min-width: 1281px) and (max-width: 1500px) {
+	.login-root-container {
+		.login-body-container {
+			.inputs-container {
+				.social-logins {
+					.social-logins-wrapper {
+						.social-login-element {
+							.login-component {
+								font-size: 12px;
+								padding-left: 15%;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
 @include for-until-tablet {
 	.login-root-container {
 		.login-body-container {
